--- a/app/src/main/res/drawable/selector_tabtext.xml
+++ b/app/src/main/res/drawable/selector_tabtext.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:color="#EE2C2C" />
-    <item android:state_pressed="true" android:color="#EE2C2C" />
-    <item android:state_focused="true" android:color="#EE2C2C" />
-    <item android:color="@android:color/darker_gray"/>
+    <item android:color="#EE2C2C" android:state_selected="true" />
+    <item android:color="#EE2C2C" android:state_pressed="true" />
+    <item android:color="#EE2C2C" android:state_focused="true" />
+    <item android:color="@android:color/darker_gray" />
 </selector> 
