--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -6,31 +6,36 @@
     android:orientation="vertical"
 
     tools:context="com.stx.xhb.dmgameapp.activities.CommentActivity">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.v7.widget.Toolbar>O
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/comment_refresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
         <ListView
             android:id="@+id/lv_comment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></ListView>
+
         <TextView
             android:id="@+id/tv_empty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="暂无评论"/>
+            android:text="暂无评论" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@android:color/darker_gray"></View>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,22 +44,22 @@
 
         <EditText
             android:id="@+id/ed_comment"
-            android:layout_marginLeft="10dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
-            android:singleLine="true"
             android:background="@drawable/comment_input_bg"
-            android:hint="尽情吐槽吧~~~" />
+            android:hint="尽情吐槽吧~~~"
+            android:singleLine="true" />
 
         <Button
             android:id="@+id/comment_btn"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:background="@drawable/btn_commit"
-            android:layout_marginBottom="5dp"
             android:text="评论" />
     </LinearLayout>
 </LinearLayout>
