--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -22,27 +22,30 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@android:color/darker_gray"></View>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="5dp">
+
         <EditText
             android:id="@+id/ed_comment"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:singleLine="true"
-            android:hint="尽情吐槽吧~~~"
             android:background="@drawable/comment_input_bg"
-            android:layout_height="wrap_content" />
+            android:hint="尽情吐槽吧~~~"
+            android:singleLine="true" />
+
         <Button
             android:id="@+id/comment_btn"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:background="@drawable/btn_commit"
-            android:layout_marginBottom="5dp"
-            android:text="评论"/>
+            android:text="评论" />
     </LinearLayout>
 </LinearLayout>
