--- a/app/src/main/res/layout/banner_view.xml
+++ b/app/src/main/res/layout/banner_view.xml
@@ -4,9 +4,8 @@
 
     <com.stx.xhb.dmgameapp.view.ImageCycleView
         android:id="@+id/icv_topView"
-        android:background="@drawable/default_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </com.stx.xhb.dmgameapp.view.ImageCycleView>
+        android:layout_height="wrap_content"
+        android:background="@drawable/default_image"></com.stx.xhb.dmgameapp.view.ImageCycleView>
 
 </RelativeLayout>
