--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -8,23 +8,27 @@
 
     <!-- 标题 -->
     <include layout="@layout/title_layout"></include>
+
     <LinearLayout
-        android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="游戏类型："
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
+
         <Spinner
             android:id="@+id/game_spinner"
             android:layout_width="wrap_content"
-            android:spinnerMode="dialog"
+            android:layout_height="40dp"
             android:background="@drawable/edittext1"
-            android:layout_height="40dp"></Spinner>
+            android:spinnerMode="dialog"></Spinner>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
@@ -34,21 +38,23 @@
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <GridView
-            android:padding="5dp"
             android:id="@+id/game_grid"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:numColumns="auto_fit"
             android:columnWidth="100dp"
-            android:verticalSpacing="10dp"
-            android:horizontalSpacing="10dp"/>
+            android:horizontalSpacing="10dp"
+            android:numColumns="auto_fit"
+            android:padding="5dp"
+            android:verticalSpacing="10dp" />
+
         <TextView
             android:id="@+id/tv_empty"
-            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="暂无该类游戏"/>
+            android:gravity="center"
+            android:text="暂无该类游戏" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
