--- a/app/src/main/res/layout/listview_item_layout.xml
+++ b/app/src/main/res/layout/listview_item_layout.xml
@@ -5,17 +5,18 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/iv"
             android:layout_width="100dp"
             android:layout_height="80dp"
-            android:scaleType="fitXY"
-            android:background="@drawable/product_default"/>
+            android:background="@drawable/product_default"
+            android:scaleType="fitXY" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,42 +44,47 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:padding="5dp">
+
                 <TextView
                     android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="日期" />
+
                 <TextView
                     android:id="@+id/comment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="right"
                     android:paddingLeft="60dp"
-                    android:text="评论数"
-                    android:layout_gravity="right" />
+                    android:text="评论数" />
             </LinearLayout>
             <!--设置隐藏属性，以便点击跳转详情的时候使用-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                  <TextView
-                   android:id="@+id/tv_id"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:visibility="gone"
-                   android:text="文章id" />
-               <TextView
-                   android:id="@+id/tv_typeid"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:visibility="gone"
-                   android:text="分类id" />
-               <TextView
-                   android:id="@+id/tv_url"
-                   android:visibility="gone"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="文章url" />
+
+                <TextView
+                    android:id="@+id/tv_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="文章id"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/tv_typeid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="分类id"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/tv_url"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="文章url"
+                    android:visibility="gone" />
             </LinearLayout>
 
         </LinearLayout>
