修复bug，添加极光推送服务

--- a/app/src/main/res/layout/listview_footer.xml
+++ b/app/src/main/res/layout/listview_footer.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal">
 
     <ProgressBar
+        style="@style/Widget.AppCompat.ProgressBar"
         android:id="@+id/indeterminate_progress_library"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
