--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="45dp">
         <ImageButton
             android:id="@+id/main_action_menu"
             android:layout_width="45dp"
