--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -11,12 +11,12 @@
         android:id="@+id/article_indicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"></com.viewpagerindicator.TabPageIndicator>
+        android:background="@color/colorWhite"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/article_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></android.support.v4.view.ViewPager>
+        android:layout_weight="1"/>
 
 </LinearLayout>
