--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FF6347</color>
+    <color name="colorPrimaryDark">#FF6347</color>
+    <color name="colorAccent">#FF6347</color>
     <color name="colorTitle">#4876FF</color>
     <color name="colorGray">#BDBDBD</color>
     <color name="colorBlack">#575757</color>
