--- a/app/src/main/res/values/umeng_socialize_strings.xml
+++ b/app/src/main/res/values/umeng_socialize_strings.xml
@@ -53,6 +53,7 @@
     <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
     <!-- 平台名称 -->
     <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
+    <string name="umeng_socialize_text_wenxin_fav">微信收藏</string>
     <string name="umeng_socialize_text_sina_key">微博</string>
     <string name="umeng_socialize_text_qq_key">QQ</string>
     <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
@@ -60,6 +61,7 @@
     <string name="umeng_socialize_text_douban_key">豆瓣网</string>
     <string name="umeng_socialize_text_weixin_key">微信</string>
     <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
+    <string name="umeng_socialize_text_weixin_fav_key">微信收藏</string>
     <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
     <string name="umeng_example_home_btn_plus">社交分享</string>
     <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
