--- a/app/src/main/res/layout/listview_footer.xml
+++ b/app/src/main/res/layout/listview_footer.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="horizontal">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="center"
+              android:orientation="horizontal">
 
-    <ProgressBar
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:id="@+id/indeterminate_progress_library"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <com.stx.xhb.dmgameapp.view.LoadingView.LVCircularSmile
+        android:layout_width="40dp"
+        android:layout_height="40dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="正在加载" />
+        android:textColor="@color/colorGray"
+        android:textSize="13sp"
+        android:text="正在努力加载..."/>
 </LinearLayout>
