--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -55,11 +55,19 @@
             android:textSize="15sp"
             android:textColor="#000000"
             android:text="清除缓存"/>
+
         <ImageView
+            android:id="@+id/iv_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:background="@drawable/app_ic_goto"/>
+        <TextView
+            android:id="@+id/tv_cache"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/iv_right"
+            android:text="0kb"/>
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
