--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -38,7 +38,7 @@
                 app:loadMoreMode="scroll"
                 android:divider="@null"
                 android:cacheColorHint="#00000000"
-                android:layout_height="match_parent"></cn.finalteam.loadingviewfinal.ListViewFinal>
+                android:layout_height="match_parent"/>
     </com.classic.common.MultipleStatusView>
     </cn.finalteam.loadingviewfinal.PtrClassicFrameLayout>
     </FrameLayout>
