--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
 
-    tools:context="com.stx.xhb.dmgameapp.activities.CommentActivity">
+    tools:context="com.stx.xhb.dmgameapp.activity.CommentActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
