--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ArticleDetailActivity">
+    tools:context=".activity.ArticleDetailActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
