--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.stx.xhb.dmgameapp.activities.GameDetailActivity">
+    tools:context="com.stx.xhb.dmgameapp.activity.GameDetailActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
