--- a/app/src/main/res/layout/activity_game_web.xml
+++ b/app/src/main/res/layout/activity_game_web.xml
@@ -7,6 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.stx.xhb.dmgameapp.activities.GameWebActivity">
+    tools:context="com.stx.xhb.dmgameapp.activity.GameWebActivity">
 
 </RelativeLayout>
