--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.stx.xhb.dmgameapp.activities.SettingActivity">
+    tools:context="com.stx.xhb.dmgameapp.activity.SettingActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/setting_toolbar"
