--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -6,7 +6,7 @@
     tools:context="com.stx.xhb.dmgameapp.fragment.ForumFragment">
 
     <!-- 标题 -->
-    <include layout="@layout/title_layout"></include>
+    <include layout="@layout/title_layout"/>
 
     <com.tencent.smtt.sdk.WebView
         android:id="@+id/web_view"
