--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,34 +1,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragment.innerFragments.NewsFragment">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".fragment.innerFragments.NewsFragment">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <in.srain.cube.views.ptr.PtrClassicFrameLayout
-        android:id="@+id/ptr_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.classic.common.MultipleStatusView
-            android:id="@+id/multiplestatusview"
+
+        <cn.finalteam.loadingviewfinal.PtrClassicFrameLayout
+            android:id="@+id/ptr_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            app:emptyView="@layout/custom_empty_view"
-            app:errorView="@layout/custom_error_view"
-            app:loadingView="@layout/custom_loading_view"
-            app:noNetworkView="@layout/custom_no_network_view">
-        <ListView
-            android:id="@+id/content_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="none"
-            android:divider="@null"
-            android:focusable="false"/>
-        </com.classic.common.MultipleStatusView>
-    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+            android:layout_height="match_parent">
+
+            <com.classic.common.MultipleStatusView
+                android:id="@+id/multiplestatusview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                app:emptyView="@layout/custom_empty_view"
+                app:errorView="@layout/custom_error_view"
+                app:loadingView="@layout/custom_loading_view"
+                app:noNetworkView="@layout/custom_no_network_view">
+
+                <cn.finalteam.loadingviewfinal.ListViewFinal
+                    android:id="@+id/content_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="@null"
+                    android:focusable="false"
+                    android:scrollbars="none"/>
+
+            </com.classic.common.MultipleStatusView>
+        </cn.finalteam.loadingviewfinal.PtrClassicFrameLayout>
     </FrameLayout>
 </LinearLayout>
