--- a/app/src/main/res/layout/listview_item_layout.xml
+++ b/app/src/main/res/layout/listview_item_layout.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     card_view:cardCornerRadius="2dp"
-    card_view:contentPadding= "5dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardUseCompatPadding="true"
+    card_view:contentPadding="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,84 +15,47 @@
         android:orientation="horizontal"
         android:padding="5dp">
 
-        <ImageView
-            android:id="@+id/iv"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
-            android:background="@drawable/product_default"
-            android:scaleType="fitXY" />
-
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginRight="8dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="5dp">
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="标题"
-                    android:textSize="15sp" />
-
-
-            </LinearLayout>
-
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:lines="2"
+                android:ellipsize="end"
+                android:textSize="15sp"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="5dp">
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="bottom"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/date"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="日期" />
+                    android:layout_height="wrap_content"/>
 
-                <TextView
-                    android:id="@+id/comment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:paddingLeft="60dp"
-                    android:text="评论数" />
-            </LinearLayout>
-            <!--设置隐藏属性，以便点击跳转详情的时候使用-->
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="文章id"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/tv_typeid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="分类id"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/tv_url"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="文章url"
-                    android:visibility="gone" />
             </LinearLayout>
 
         </LinearLayout>
+
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="115dp"
+            android:layout_height="80dp"
+            android:background="@drawable/product_default"
+            android:scaleType="fitXY"/>
+
+
     </LinearLayout>
 
 
