--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <!--分割线-->
     <color name="common_line">#ededed</color>
     <color name="color_f3f3f3">#f3f3f3</color>
+    <color name="color_008cf0">#008cf0</color>
 </resources>
