--- a/core/src/main/res/layout/layout_widget_label_indicator_view.xml
+++ b/core/src/main/res/layout/layout_widget_label_indicator_view.xml
@@ -12,7 +12,7 @@
         android:gravity="center"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
-        android:textColor="@color/common_title"
+        android:textColor="@color/color_888888"
         android:textSize="16dp"/>
 
     <LinearLayout
