--- a/app/src/main/res/drawable/selector_trans_divider.xml
+++ b/app/src/main/res/drawable/selector_trans_divider.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true"><color android:color="@color/divider" />
+    <item android:state_pressed="true">
+        <color android:color="@color/divider"/>
     </item>
-    <item android:state_pressed="false"><color android:color="@android:color/transparent" />
+    <item android:state_pressed="false">
+        <color android:color="@android:color/transparent"/>
     </item>
 
 </selector>
