--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,70 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/about_bg"
-    tools:context="com.stx.xhb.dmgameapp.activity.AboutActivity">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/about_bg"
+              android:orientation="vertical"
+              tools:context="com.stx.xhb.dmgameapp.activity.AboutActivity">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/about_toolbar"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        app:theme="@style/ToolbarTheme"
-        android:layout_height="wrap_content"/>
+        app:theme="@style/ToolbarTheme"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:textSize="35sp"
-            android:text="游戏资讯"
-            android:layout_gravity="center_horizontal"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="189dp" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="189dp"
+            android:text="游戏资讯"
+            android:textColor="@color/colorWhite"
+            android:textSize="35sp"/>
+
         <TextView
             android:id="@+id/version"
-            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
             android:layout_below="@id/name"
-            android:textSize="20sp"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
             android:text="版本号"
-            android:layout_centerInParent="true" />
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"/>
+
         <Button
             android:id="@+id/btn_csdn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CSDN博客"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/shape_btn_commit_red"
-            android:layout_gravity="center_horizontal"
             android:layout_above="@+id/btn_home"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:background="@drawable/shape_btn_commit_red"
+            android:text="CSDN博客"
+            android:textColor="@color/colorWhite"/>
+
         <Button
             android:id="@+id/btn_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="项目主页"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/shape_btn_commit_red"
-            android:layout_gravity="center_horizontal"
             android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="91dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="91dp" />
+            android:background="@drawable/shape_btn_commit_red"
+            android:text="项目主页"
+            android:textColor="@color/colorWhite"/>
     </RelativeLayout>
 
 </LinearLayout>
