--- a/app/src/main/res/layout/custom_empty_view.xml
+++ b/app/src/main/res/layout/custom_empty_view.xml
@@ -12,8 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@mipmap/ic_empty"
-        />
+        android:src="@mipmap/ic_empty"/>
 
     <TextView
         android:id="@+id/empty_view_tv"
