--- a/app/src/main/res/layout/fragment_commond.xml
+++ b/app/src/main/res/layout/fragment_commond.xml
@@ -1,18 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.stx.xhb.dmgameapp.fragment.innerFragments.CommondFragment">
-    <!--添加Android自带的下拉刷新控件-->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".fragment.CommonFragment">
+
     <in.srain.cube.views.ptr.PtrClassicFrameLayout
         android:id="@+id/ptr_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.classic.common.MultipleStatusView
             android:id="@+id/multiplestatusview"
             android:layout_width="match_parent"
@@ -22,13 +20,13 @@
             app:errorView="@layout/custom_error_view"
             app:loadingView="@layout/custom_loading_view"
             app:noNetworkView="@layout/custom_no_network_view">
-        <ListView
-            android:id="@+id/content_view"
-            android:layout_width="match_parent"
-            android:scrollbars="none"
-            android:divider="@null"
-            android:layout_height="match_parent" />
+
+            <ListView
+                android:id="@+id/content_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@null"
+                android:scrollbars="none"/>
         </com.classic.common.MultipleStatusView>
     </in.srain.cube.views.ptr.PtrClassicFrameLayout>
-    </FrameLayout>
 </LinearLayout>
