--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -1,51 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:background="@drawable/user_head"
+        android:background="@color/colorPrimary"
         android:gravity="center"
         android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/iv_user_img"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:src="@mipmap/ic_logo"
-            app:civ_border_color="#fcfcfc"
-            app:civ_border_width="2dp"/>
+        <LinearLayout
+            android:id="@+id/ll_login_info"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
+            android:visibility="gone">
 
-        <TextView
-            android:layout_width="wrap_content"
+            <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
+                android:id="@+id/iv_user_img"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:src="@drawable/default_image"
+                app:siShape="@drawable/shape_rounded_rectangle"
+                app:siSquare="true"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_account"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="jxnk25"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="16dp"/>
+
+                <TextView
+                    android:id="@+id/tv_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="等级：新手玩家\n积分：2\n帖子：2"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="14dp"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_no_login"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="登录/注册"
-            android:textColor="@color/colorWhite"
-            android:textSize="16sp"/>
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <com.github.siyamed.shapeimageview.CircularImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:src="@mipmap/ic_logo"
+                app:siBorderColor="#fcfcfc"
+                app:siBorderWidth="2dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="登录/注册"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite">
 
         <TextView
+            android:id="@+id/tv_collect"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="?selectableItemBackground"
             android:drawableTop="@drawable/user_collect"
             android:gravity="center"
             android:padding="4dp"
-            android:text="收藏"/>
+            android:text="收藏"
+            android:textColor="@color/color_888888"/>
 
         <View
             android:layout_width="1px"
@@ -53,38 +106,61 @@
             android:background="@color/divider"/>
 
         <TextView
+            android:id="@+id/tv_message"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="?selectableItemBackground"
             android:drawableTop="@drawable/user_information"
             android:gravity="center"
             android:padding="4dp"
-            android:text="消息"/>
+            android:text="消息"
+            android:textColor="@color/color_888888"/>
+
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="15dp"
         android:background="@color/color_f3f3f3"/>
 
     <com.stx.core.widget.LabelIndicatorView
+        android:id="@+id/btn_setting"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:visibility="visible"
+        android:layout_height="45dp"
         android:background="@color/colorWhite"
         android:foreground="?selectableItemBackground"
+        android:visibility="visible"
         app:label_Indicator="@drawable/img_cmmon_next"
         app:label_title="设置"/>
 
     <include layout="@layout/layout_divider_panding"/>
 
     <com.stx.core.widget.LabelIndicatorView
+        android:id="@+id/btn_about"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:visibility="visible"
+        android:layout_height="45dp"
         android:background="@color/colorWhite"
         android:foreground="?selectableItemBackground"
+        android:visibility="visible"
         app:label_Indicator="@drawable/img_cmmon_next"
         app:label_title="关于"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="@color/color_f3f3f3"/>
+
+    <TextView
+        android:id="@+id/btn_login_out"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/colorWhite"
+        android:foreground="?selectableItemBackground"
+        android:gravity="center"
+        android:text="退出登录"
+        android:textColor="@color/color_888888"
+        android:textSize="15sp"
+        android:visibility="gone"/>
+
 </LinearLayout>
