1.引入自定义对话框； 2.删除多余代码；

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -55,7 +55,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/shape_btn_commit_red"
-            android:text="CSDN博客"
+            android:text="简书"
             android:textColor="@color/colorWhite"/>
 
         <Button
