--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="清除缓存"
-            android:textColor="#000000"
+            android:textColor="@color/colorBlack"
             android:textSize="15sp"/>
 
         <ImageView
@@ -74,6 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/iv_right"
             android:text="0kb"/>
+
     </RelativeLayout>
 
     <View
@@ -93,14 +94,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="检查更新"
-            android:textColor="#000000"
+            android:textColor="@color/colorBlack"
             android:textSize="15sp"/>
 
         <ImageView
+            android:id="@+id/icon_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:background="@drawable/app_ic_goto"/>
+
+        <TextView
+            android:id="@+id/tv_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/icon_right"
+            android:textColor="@color/color_888888"
+            android:textSize="15sp"/>
 
     </RelativeLayout>
 
@@ -120,7 +130,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="给我评分"
-            android:textColor="#000000"
+            android:textColor="@color/colorBlack"
             android:textSize="15sp"/>
 
         <ImageView
@@ -135,30 +145,4 @@
         android:layout_height="0.5dp"
         android:background="@color/colorGray"/>
 
-    <RelativeLayout
-        android:id="@+id/setting_iv_about"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/selector_trans_divider"
-        android:padding="15dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="关于"
-            android:textColor="#000000"
-            android:textSize="15sp"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/app_ic_goto"/>
-
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/colorGray"/>
 </LinearLayout>
