--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -91,7 +91,7 @@
         <TextView
             android:id="@+id/tv_collect"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="?selectableItemBackground"
             android:drawableTop="@drawable/user_collect"
