--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/about_bg"
-              android:orientation="vertical"
-              tools:context="com.stx.xhb.dmgameapp.activity.AboutActivity">
+              android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/about_toolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        app:theme="@style/ToolbarTheme"/>
+        android:layout_height="wrap_content">
+        <ImageButton
+            android:id="@+id/article_share"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
+            android:background="@null"/>
+    </android.support.v7.widget.Toolbar>
 
     <RelativeLayout
         android:layout_width="match_parent"
