--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.stx.xhb.dmgameapp.fragment.CommentFragment">
+              tools:context=".ui.fragment.CommentFragment">
 
 
     <FrameLayout
