--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="common_line">#ededed</color>
     <color name="color_f3f3f3">#f3f3f3</color>
     <color name="color_008cf0">#008cf0</color>
+    <color name="color_eeeeee">#eeeeee</color>
 </resources>
