--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -4,6 +4,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+    <!-- 标题 -->
     <include layout="@layout/layout_title"/>
 
     <android.support.design.widget.TabLayout
@@ -23,10 +24,8 @@
         android:background="@color/common_line"/>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/article_viewpager"
+        android:id="@+id/video_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
-
-
 </LinearLayout>
