--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -20,7 +20,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:background="@drawable/biz_read_subscription_source_list_header_bg"
+        android:background="@drawable/icon_header_bg"
         android:gravity="center"
         android:orientation="vertical">
 
