--- a/app/src/main/res/layout/list_item_forum.xml
+++ b/app/src/main/res/layout/list_item_forum.xml
@@ -7,6 +7,7 @@
               android:padding="12dp">
 
     <ImageView
+        android:id="@+id/iv_forum"
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:background="@drawable/shape_image_storke"
@@ -22,18 +23,20 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_forum_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="《NBA2K18》"
-            android:textColor="@color/color_1c1c1c"/>
+            android:textColor="@color/color_7f7f7f"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/tv_count"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -43,6 +46,7 @@
                 android:textSize="12sp"/>
 
             <TextView
+                android:id="@+id/tv_sort"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -60,6 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/selector_gray_rec_border_pandind_6dp"
-        android:text="收藏"/>
+        android:text="收藏"
+        android:textSize="12sp"/>
 
 </LinearLayout>
