--- a/app/src/main/res/layout/activity_game_details.xml
+++ b/app/src/main/res/layout/activity_game_details.xml
@@ -6,5 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.stx.xhb.dmgameapp.ui.activity.GameDetailsActivity">
-
+    <android.support.v7.widget.Toolbar
+         android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
